delete and check buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="wrapper">
             <div class="input-container">
                 <input type="text" name="todo" id="todo-input" class="todo-input" placeholder="Enter task">
-                <button class="add-button" id="add-button">
+                <button class="add-button add" id="add-button">
                     <i class="fa-solid fa-ciecle-plus">n</i>
                 </button>
             </div>
