--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- boostrap style -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <section>
-        <h1>Todo list</h1>
-        <div class="wrapper">
+    <section class="container">
+        <h1 style=" text-align: center;color: #fff;font-size: 60px;margin-bottom: 60px;">Todo list</h1>
+        <div class="wrapper  ">
             <div class="input-container">
                 <input type="text" name="todo" id="todo-input" class="todo-input" placeholder="Enter Todo Task">
                 <button class="add-button add" id="add-button">
                     <i class="fa-solid fa-circle-plus"></i> </button>
             </div>
-            <ul class="todo-container" id="todo-container">
+            <ul class="todo-container  " id="todo-container">
 
             </ul>
         </div>
